# sshnest

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  sshnest.desktop
.github/: copilot-instructions.md
samples/: screenshot_config.json
scripts/: build_appimage.sh  build_pyinstaller.sh  dev_setup.sh  pyinstaller_entry.py  run.sh
src/sshnest/: __init__.py  config.py  dialogs.py  history_import.py  launcher.py  main.py  models.py
