[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sshnest"
version = "0.1.0"
description = "Native Linux SSH/SFTP connection launcher."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.7",
]

[project.gui-scripts]
sshnest = "sshnest.main:main"

[tool.setuptools.packages.find]
where = ["src"]
